working on video poster

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,4 @@ ModelManifest.xml
 /Presentation/OntrackHealth.WebCore/appsettings.json
 /Presentation/OntrackHealth.WebCore/appsettings.Development.json
 /Presentation/OntrackHealth.WebCore/Resources/ffmpeg/ffmpeg.exe
+/VideoHLS.zip
